Add empty HttpPoitiersCityParkingDataProvider @ DistanceProvider